--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-.DS_Store
-.idea
-*.ai
-*.log
-*.pdf
-*.psd
-*.sublime*
-css/*.css
+build/
 node_modules/
+.DS_Store
 Thumbs.db
+.idea
+*.sublime*
+*.log
+*.psd
+*.ai
+*.pdf
+css/*.css
